--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html
   PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -13,7 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"></script>
     <link href="scripts/main.css" rel="stylesheet" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Official website for Florida Tech FITSEC Club." />
     <meta name="keywords" content="CTF, reverse engineering, binary exploitation, web exploitation, cyber defense, Cybersecurity, FIT, Florida Tech, Florida Tech Club, fitsec" />
     <!-- InstanceBeginEditable name="head" -->
@@ -68,64 +69,43 @@
     <div class='fluid-container mt-3 mb-3' id="">
         <div class='row'>
             <div class='col-10 offset-1 bg-light text-center'>
-            <!-- InstanceBeginEditable name="Mainpage" --> <br />
-          <br />
-          <h1>About us</h1>
-          <p>FITSEC is Florida Tech's Cyber Security team who is focused on
-            competing in Cybersecurity competitions. Not only do we offer
-            students the opportunity to hone their skills with respect to
-            hacking and counter-hacking, but we also are building connections
-            with industry to provide a pathway for potential employment
-            opportunities. We believe the best way to stop a hacker is to know
-            their methods.</p>
-          <hr />
-          <h1 id="defensive">Defensive Team</h1>
-          <br />
-          <h3>CYBER DEFENSE</h3>
-          <p>Cyber Defense competitions revolve around keeping a red team out of
-            the network through various defensive methodologies and
-            technologies. Some competitions such as Hivestorm are focused on
-            patching and reconfiguring vulnerable machines. All defensive
-            competitions are fast-paced and require tenacity and quick thinking.
-            Florida Tech offers a Cyber Defense course that helps students
-            prepare for careers in securing networks from hackers.</p>
-          <hr />
-          <h1 id="offensive">Offensive Team</h1>
-          <br />
-          <h3>CTF (Capture the Flag)</h3>
-          <p>Capture the flag competitions pit teams against each other in a
-            race against time to solve as many security related challenges as
-            possible. CTFs are typically exploit based, however, some CTFs are
-            defensive as well. The most typical style of CTF that FITSEC
-            competes in are jeopardy-style CTFs where competitors analyze web
-            applications and programs in order to retrieve flags through various
-            means. These flags are then submitted for points to climb
-            scoreboard. Courses that are offered at Florida Tech that help build
-            the foundation necessary to tackle these problems include
-            Introduction to Cybersecurity, Introduction to Reverse Engineering,
-            and Introduction to Vulnerability Research.</p>
-          <br />
-          <h3>Penetration Testing and Red Teaming</h3>
-          <p>Penetration testing competitions are aimed towards identifying
-            vulnerabilities in a network and exploiting them to gain additional
-            footholds and establish persistence. The same methodologies used by
-            hackers are used to test networks. These exercises end in the pen
-            testing team writing a report based on their findings where they can
-            recommend to the blue team how best to update their security. For
-            red teaming events, the red team plays against a live blue team
-            where they actively try to keep the red team from gaining access.</p>
-          <hr />
-          <h1 id="faq">FAQ</h1>
-          <p>
-            <ul>
-              <li><strong>Q: Do I need experience to join?<br />A:</strong> Nope! We have a training pipeline created to teach the basics to newcomers. This pipeline gives each new member a solid foundation that enables them to delve deeper into areas of interest and specialize to be more of an asset to the team.</li>
-              <li><strong>Q: Do I need to be Computer Science to join?<br />A:</strong> Absolutely not! Being a Computer Science or Computer Engineering student definitely gives you a good start, but anyone is capable of learning about cybersecurity. In fact, some of our competitors have been Aerospace Engineers.</li>
-              <li><strong>Q: When does FITSEC meet?<br />A:</strong> It varies per semester. We send out a poll early in the semester to identify times that are the most convenient for the members to maximize attendance.</li>
-              <li><strong>Q: Where does FITSEC meet?<br />A:</strong> This has varied in the past, however, our permanent home is now Crawford 524. This is the room for all cybersecurity classes and also FITSEC's clubhouse.</li>
-            </ul>
-            <br />
-          </p>
-          <!-- InstanceEndEditable -->
+                <!-- InstanceBeginEditable name="Mainpage" --><br />
+                <br />
+                <h1>About us</h1>
+                <p>FITSEC is Florida Tech's Cyber Security team who is focused on competing in Cybersecurity competitions. Not only do we offer students the opportunity to hone their skills with respect to hacking and counter-hacking, but we also are building
+                    connections with industry to provide a pathway for potential employment opportunities. We believe the best way to stop a hacker is to know their methods.</p>
+                <hr />
+                <h1 id="defensive">Defensive Team</h1>
+                <br />
+                <h3>CYBER DEFENSE</h3>
+                <p>Cyber Defense competitions revolve around keeping a red team out of the network through various defensive methodologies and technologies. Some competitions such as Hivestorm are focused on patching and reconfiguring vulnerable machines.
+                    All defensive competitions are fast-paced and require tenacity and quick thinking. Florida Tech offers a Cyber Defense course that helps students prepare for careers in securing networks from hackers.</p>
+                <hr />
+                <h1 id="offensive">Offensive Team</h1>
+                <br />
+                <h3>CTF (Capture the Flag)</h3>
+                <p>Capture the flag competitions pit teams against each other in a race against time to solve as many security related challenges as possible. CTFs are typically exploit based, however, some CTFs are defensive as well. The most typical style
+                    of CTF that FITSEC competes in are jeopardy-style CTFs where competitors analyze web applications and programs in order to retrieve flags through various means. These flags are then submitted for points to climb scoreboard. Courses
+                    that are offered at Florida Tech that help build the foundation necessary to tackle these problems include Introduction to Cybersecurity, Introduction to Reverse Engineering, and Introduction to Vulnerability Research.</p>
+                <br />
+                <h3>Penetration Testing and Red Teaming</h3>
+                <p>Penetration testing competitions are aimed towards identifying vulnerabilities in a network and exploiting them to gain additional footholds and establish persistence. The same methodologies used by hackers are used to test networks. These
+                    exercises end in the pen testing team writing a report based on their findings where they can recommend to the blue team how best to update their security. For red teaming events, the red team plays against a live blue team where they
+                    actively try to keep the red team from gaining access.</p>
+                <hr />
+                <h1 id="faq">FAQ</h1>
+                <p>
+                    <ul>
+                        <li><strong>Q: Do I need experience to join?<br />A:</strong> Nope! We have a training pipeline created to teach the basics to newcomers. This pipeline gives each new member a solid foundation that enables them to delve deeper into
+                            areas of interest and specialize to be more of an asset to the team.</li>
+                        <li><strong>Q: Do I need to be Computer Science to join?<br />A:</strong> Absolutely not! Being a Computer Science or Computer Engineering student definitely gives you a good start, but anyone is capable of learning about cybersecurity.
+                            In fact, some of our competitors have been Aerospace Engineers.</li>
+                        <li><strong>Q: When does FITSEC meet?<br />A:</strong> It varies per semester. We send out a poll early in the semester to identify times that are the most convenient for the members to maximize attendance.</li>
+                        <li><strong>Q: Where does FITSEC meet?<br />A:</strong> This has varied in the past, however, our permanent home is now Crawford 524. This is the room for all cybersecurity classes and also FITSEC's clubhouse.</li>
+                    </ul>
+                    <br />
+                </p>
+                <!-- InstanceEndEditable -->
             </div>
         </div>
     </div>
@@ -135,4 +115,6 @@
 </body>
 
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
