--- a/calendar.html
+++ b/calendar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html
   PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -13,7 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"></script>
     <link href="scripts/main.css" rel="stylesheet" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Official website for Florida Tech FITSEC Club." />
     <meta name="keywords" content="CTF, reverse engineering, binary exploitation, web exploitation, cyber defense, Cybersecurity, FIT, Florida Tech, Florida Tech Club, fitsec" />
     <!-- InstanceBeginEditable name="head" -->
@@ -68,13 +69,13 @@
     <div class='fluid-container mt-3 mb-3' id="">
         <div class='row'>
             <div class='col-10 offset-1 bg-light text-center'>
-            <!-- InstanceBeginEditable name="Mainpage" -->
-            <br />
-            <h1>FiTSEC Calendar</h1>
-            <br />
-            <iframe src="https://calendar.google.com/calendar/embed?src=my.fit.edu_p2sgcoekt330md710eckhsiie4%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-	    <br />            
-            <!-- InstanceEndEditable -->
+                <!-- InstanceBeginEditable name="Mainpage" -->
+                <br />
+                <h1>FiTSEC Calendar</h1>
+                <br />
+                <iframe src="https://calendar.google.com/calendar/embed?src=my.fit.edu_p2sgcoekt330md710eckhsiie4%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                <br />
+                <!-- InstanceEndEditable -->
             </div>
         </div>
     </div>
@@ -84,4 +85,6 @@
 </body>
 
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
