--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html
   PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -13,7 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"></script>
     <link href="scripts/main.css" rel="stylesheet" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Official website for Florida Tech FITSEC Club." />
     <meta name="keywords" content="CTF, reverse engineering, binary exploitation, web exploitation, cyber defense, Cybersecurity, FIT, Florida Tech, Florida Tech Club, fitsec" />
     <!-- InstanceBeginEditable name="head" -->
@@ -68,26 +69,17 @@
     <div class='fluid-container mt-3 mb-3' id="">
         <div class='row'>
             <div class='col-10 offset-1 bg-light text-center'>
-            <!-- InstanceBeginEditable name="Mainpage" --> <br />
-          <h1>Contact Us</h1>
-          <p>We're happy to hear some of your feedback. <br />
-            <br />
-            Email: fitsec.floridatech@gmail.com </p>
-          <br />
-          <hr />
-          <h2>Add a Suggestion</h2>
-          <p>We want to hear from you. If you have something that you wish to
-            see in the team, add an anonymous suggestion to the suggestion box,
-            and we'll look over it as soon as possible.</p>
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSekPLGFzOPbxHUUqwPHe2IQifLxWoENmXQLnmqVzbU6KbQ5bQ/viewform?embedded=true"
-            minheight="450px"
-            marginheight="0"
-            marginwidth="0"
-            width="60%"
-            height="500px"
-            frameborder="0">Loading…</iframe>
-          <br style="clear:both;" />
-          <!-- InstanceEndEditable -->
+                <!-- InstanceBeginEditable name="Mainpage" --><br />
+                <h1>Contact Us</h1>
+                <p>We're happy to hear some of your feedback. <br />
+                    <br /> Email: fitsec.floridatech@gmail.com </p>
+                <br />
+                <hr />
+                <h2>Add a Suggestion</h2>
+                <p>We want to hear from you. If you have something that you wish to see in the team, add an anonymous suggestion to the suggestion box, and we'll look over it as soon as possible.</p>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSekPLGFzOPbxHUUqwPHe2IQifLxWoENmXQLnmqVzbU6KbQ5bQ/viewform?embedded=true" minheight="450px" marginheight="0" marginwidth="0" width="60%" height="500px" frameborder="0">Loading…</iframe>
+                <br style="clear:both;" />
+                <!-- InstanceEndEditable -->
             </div>
         </div>
     </div>
@@ -97,4 +89,6 @@
 </body>
 
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
