--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html
   PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/index.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!-- InstanceBeginEditable name="doctitle" -->    <title>FITSEC - CTF</title>    <!-- InstanceEndEditable -->
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>FITSEC - CTF</title>
+    <!-- InstanceEndEditable -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css">
 
     <link href="img/FITSECCrest.png" rel="icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"></script>
     <link href="scripts/main.css" rel="stylesheet" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Official website for Florida Tech FITSEC Club." />
     <meta name="keywords" content="CTF, reverse engineering, binary exploitation, web exploitation, cyber defense, Cybersecurity, FIT, Florida Tech, Florida Tech Club, fitsec" />
-    <!-- InstanceBeginEditable name="head" -->    <!-- InstanceEndEditable -->
+    <!-- InstanceBeginEditable name="head" -->
+    <!-- InstanceEndEditable -->
 </head>
 
 <body class='pt-5' onload="genBackground()">
@@ -65,7 +69,24 @@
     <div class='fluid-container mt-3 mb-3' id="">
         <div class='row'>
             <div class='col-10 offset-1 bg-light text-center'>
-            <!-- InstanceBeginEditable name="Mainpage" --> <br />          <h1>FiTSEC Homepage</h1>          <br />          <div class="row justify-content-center">            <div class="col-xl-6 col-xl-offset-3 col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-12 col-12">              <img src="img/pantherChevronColor4.png" alt="FITSEC Official Logo"                class="rounded mx-auto d-block"                width="95%" />            </div>          </div>          <br />          <div class="px-5">            <h2>Offensive and Defensive Cybsersecurity</h2>            <p>FITSEC is Florida Tech's Cyber Security team who is focused on              competing in Cybersecurity Competitions. Not only do we offer              students the opportunity to hone their skills with respect to              hacking and counter-hacking, but we also are building connections              with industry to provide a pathway for potential employment              opportunities. We believe the best way to stop a hacker is to know              their methods.</p>          </div>          <div class="row justify-content-center">            <p> FITSEC @ Florida Tech </p>          </div>          <!-- InstanceEndEditable -->
+                <!-- InstanceBeginEditable name="Mainpage" --><br />
+                <h1>FiTSEC Homepage</h1>
+                <br />
+                <div class="row justify-content-center">
+                    <div class="col-xl-6 col-xl-offset-3 col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-12 col-12">
+                        <img src="img/pantherChevronColor4.png" alt="FITSEC Official Logo" class="rounded mx-auto d-block" width="95%" />
+                    </div>
+                </div>
+                <br />
+                <div class="px-5">
+                    <h2>Offensive and Defensive Cybsersecurity</h2>
+                    <p>FITSEC is Florida Tech's Cyber Security team who is focused on competing in Cybersecurity Competitions. Not only do we offer students the opportunity to hone their skills with respect to hacking and counter-hacking, but we also are
+                        building connections with industry to provide a pathway for potential employment opportunities. We believe the best way to stop a hacker is to know their methods.</p>
+                </div>
+                <div class="row justify-content-center">
+                    <p> FITSEC @ Florida Tech </p>
+                </div>
+                <!-- InstanceEndEditable -->
             </div>
         </div>
     </div>
@@ -75,4 +96,6 @@
 </body>
 
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
