--- a/competitions.html
+++ b/competitions.html
@@ -45,6 +45,8 @@
                         <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
                             <a class='dropdown-item' href="calendar.html">Calendar</a>
                             <a class='dropdown-item' href="competitions.html">Competitions</a>
+                            <a class="dropdown-item" href="https://floridatech.campuslabs.com/engage/organization/fitsec">Join
+                  us</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown mx-3">
