--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,7 @@
                             <a class='dropdown-item' href="competitions.html">Competitions</a>
                             <a class="dropdown-item" href="https://floridatech.campuslabs.com/engage/organization/fitsec">Join
                   us</a>
+                            <a class='dropdown-item' href="https://discord.gg/EN6RCNG">Discord</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown mx-3">
